# rust-electrum-client

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  justfile  test.txt
.github/: CODEOWNERS
.github/workflows/: cont_integration.yml
examples/: JWT_AUTH_EXAMPLE.md  jwt_auth.rs  plaintext.rs  ssl.rs  sync-plaintext.rs  tls.rs  tofu.rs  tor.rs
src/: api.rs  batch.rs  client.rs  config.rs  lib.rs  raw_client.rs  stream.rs  test_stream.rs  types.rs  util.rs  utils.rs
src/socks/: mod.rs  v4.rs  v5.rs  writev.rs
src/tofu/: mod.rs
test_data/: batch_estimate_fee.in  batch_estimate_fee.out
tests/: test_electrum_servers.rs
